Fix loading status on ill-requests
  - do not set this status when the component is initialized
  - also, 'loading' is a better name

--- a/js/components/account/overview/custom-tiles/ill/ill-requests/ill-requests.html
+++ b/js/components/account/overview/custom-tiles/ill/ill-requests/ill-requests.html
@@ -10,7 +10,7 @@
       </div>
       <md-list layout="column">
         <prm-spinner
-          ng-if="$ctrl.inProgress"
+          ng-if="$ctrl.loading"
           class="default-loader dark-on-light overlay-cover no-text"
           layout="row"
           layout-align="center center"
