--- a/js/components/account/overview/custom-tiles/ill/ill-requests/ill-requests.html
+++ b/js/components/account/overview/custom-tiles/ill/ill-requests/ill-requests.html
@@ -3,7 +3,11 @@
     <div class="tile-content" layout="column">
       <div class="tile-header" layout="column">
         <div layout="row" layout-align="space-between">
-          <h2 class="header-link light-text" ng-click="$ctrl.goToRequestPage()" tabindex="0">
+          <h2
+            class="header-link light-text"
+            ng-click="$ctrl.goToRequestPage()"
+            tabindex="0"
+          >
             <span>Interlibrary Loan Requests</span>
           </h2>
         </div>
@@ -17,7 +21,7 @@
         ></prm-spinner>
         <md-list-item
           class="md-2-line"
-          ng-repeat="request in $ctrl.requests"
+          ng-repeat="request in $ctrl.requests | limitTo:$ctrl.maxDisplay"
           ng-click="$ctrl.goToRequestPage(request.txnNum)"
           class="display-block"
         >
@@ -39,6 +43,21 @@
       >
         <div><span translate="nui.overview.norequests"></span></div>
       </div>
+      <md-button
+        class="button-with-icon prm-links overflow-visible"
+        layout="row"
+        layout-align="center center"
+        ng-if="$ctrl.requests.length > $ctrl.maxDisplay"
+        ng-click="$ctrl.goToRequestPage()"
+        aria-label="all requests"
+        ><span>View all {{ $ctrl.requests.length }} requests</span>
+        <prm-icon
+          class="arrow-icon"
+          icon-type="{{::$ctrl.accountIcons.arrowRightIcon.type}}"
+          svg-icon-set="{{::$ctrl.accountIcons.arrowRightIcon.iconSet}}"
+          icon-definition="{{::$ctrl.accountIcons.arrowRightIcon.icon}}"
+        ></prm-icon>
+      </md-button>
     </div>
   </div>
 </shib-auth>
