--- a/js/components/account/overview/fines-overview/prm-fines-overview-after.html
+++ b/js/components/account/overview/fines-overview/prm-fines-overview-after.html
@@ -1,6 +1,11 @@
 <section
-  style="padding: 1em; margin-bottom: 1em; background-color: #ffcc33; color: #7a0019; display: inline-block;"
-  ng-switch="$ctrl.mentionReturns"
+  style="
+    padding: 1em;
+    margin-bottom: 1em;
+    background-color: #ffcc33;
+    color: #7a0019;
+    display: inline-block;
+  "
 >
   <h3 style="font-size: 1.5em;">
     <prm-icon
@@ -10,12 +15,8 @@
     ></prm-icon>
     Notice
   </h3>
-  <p ng-switch-when="true" style="font-size: 1.25em;">
-    As we are unable to accept returns, we are extending the due dates on all
-    items. We are not assessing fines during the COVID-19 closure.
-  </p>
-  <p ng-switch-default style="font-size: 1.25em;">
-    We are extending the due dates on all items and not assessing fines during
-    the COVID-19 closure.
+  <p style="font-size: 1.25em;">
+    Due to COVID-19, we are extending the due dates on all items and we are not
+    currently assessing fines.
   </p>
 </section>
