Fix facet header style for 4.9.22
As of the August, 2020 release, the facet titles are wrapped in
h3 tags. This is a good thing, but it broke our styling.

--- a/scss/components/search/_facet.scss
+++ b/scss/components/search/_facet.scss
@@ -19,7 +19,7 @@ prm-facet-range {
     }
   }
 
-  & > button.section-title {
+  button.section-title {
     background-color: #dbdbdb;
     margin-bottom: 0;
     border-radius: 0;
