Don't show big icons on my account
Hiding the big "there are no ..." icons in the my account page.
2020-08 Dejargonators / D2A recommendation.

--- a/scss/components/_account.scss
+++ b/scss/components/_account.scss
@@ -40,3 +40,12 @@ courses .tiles-grid-tile .tile-content md-list-item {
     background-color: unset;
   }
 }
+
+// don't show icons in the empty tiles
+prm-account-overview {
+  .tiles-grid-tile, .message-with-icon {
+    prm-icon.giant-icon {
+      display: none;
+    }
+  }
+}
