Rename the courses card
Requested by duda0014.

--- a/js/components/account/overview/custom-tiles/courses/courses.html
+++ b/js/components/account/overview/custom-tiles/courses/courses.html
@@ -4,7 +4,7 @@
       <div class="tile-header layout-column" layout="column">
         <div layout="row" layout-align="space-between" class="layout-align-space-between-stretch layout-row">
           <h2 class="light-text">
-            <span>Library Course Pages</span>
+            <span>Library Research Guides</span>
           </h2>
         </div>
       </div>
@@ -18,7 +18,7 @@
         </md-list>
         <div ng-if="!$ctrl.hasCourses()" class="message-with-icon layout-margin layout-padding layout-align-center-center layout-column" layout="column" layout-align="center center" layout-padding="" layout-margin="">
           <prm-icon class="giant-icon bg-icon" icon-type="svg" svg-icon-set="social" icon-definition="ic_school_24px"></prm-icon>
-          <div><span>There are no courses</span>
+          <div><span>There are no guides</span>
           </div>
         </div>
       </div>
