Update fine/fee note
We're resuming normal terms of use next week.

--- a/js/components/account/overview/fines-overview/prm-fines-overview-after.html
+++ b/js/components/account/overview/fines-overview/prm-fines-overview-after.html
@@ -1,22 +1,13 @@
 <section
   style="
-    padding: 1em;
-    margin-bottom: 1em;
-    background-color: #ffcc33;
-    color: #7a0019;
     display: inline-block;
+    margin-left: 0.5em;
+    position: relative;
+    top: -1em;
   "
 >
-  <h3 style="font-size: 1.5em;">
-    <prm-icon
-      icon-type="svg"
-      svg-icon-set="alert"
-      icon-definition="ic_warning_24px"
-    ></prm-icon>
-    Notice
-  </h3>
-  <p style="font-size: 1.25em;">
-    Due to COVID-19, we are extending the due dates on all items and we are not
-    currently assessing fines.
+  <p>
+    Questions about fines?
+    <a href="https://www.lib.umn.edu/systemlibraries">Ask us!</a>
   </p>
 </section>
