Update fine note style
Mostly to be consistent with the OTB links in the fines menu...

--- a/js/components/account/overview/fines-overview/prm-fines-overview-after.html
+++ b/js/components/account/overview/fines-overview/prm-fines-overview-after.html
@@ -7,7 +7,8 @@
   "
 >
   <p>
-    Questions about fines?
-    <a href="https://www.lib.umn.edu/systemlibraries">Ask us!</a>
+    <a href="https://www.lib.umn.edu/systemlibraries">
+      Questions about fines? Ask us!
+    </a>
   </p>
 </section>
