Fix fine note layout
With certain viewport width in Safari, the flow wasn't quite right.

--- a/js/components/account/overview/fines-overview/prm-fines-overview-after.html
+++ b/js/components/account/overview/fines-overview/prm-fines-overview-after.html
@@ -1,14 +1,5 @@
-<section
-  style="
-    display: inline-block;
-    margin-left: 0.5em;
-    position: relative;
-    top: -1em;
-  "
->
-  <p>
+<section>
     <a href="https://www.lib.umn.edu/systemlibraries">
       Questions about fines? Ask us!
     </a>
-  </p>
 </section>
