Fix hover/focus style on a-z toolbar

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -3,6 +3,7 @@
 @import "components/icon";
 
 @import "components/search/actions";
+@import "components/search/atoz-search-bar";
 @import "components/search/brief-result";
 @import "components/search/browse";
 @import "components/search/facet";
