Fix hover/focus styles on ILL tiles
Making these more consistent with the other tiles on the account page...

--- a/scss/components/_account.scss
+++ b/scss/components/_account.scss
@@ -68,3 +68,16 @@ prm-fines-overview {
     }
   }
 }
+
+ill-requests, ill-articles {
+  md-list-item .md-button:hover:not([disabled]) {
+    background-color: transparent;
+    color: inherit;
+  }
+  md-list md-list-item .md-button:focus:not([disabled]) {
+    background-color: #fff;
+    & + .md-list-item-inner {
+      z-index: 2;
+    }
+  }
+}
