--- a/js/components/account/overview/custom-tiles/ill/ill-requests/ill-requests.html
+++ b/js/components/account/overview/custom-tiles/ill/ill-requests/ill-requests.html
@@ -7,7 +7,7 @@
           ng-click="$ctrl.goToRequestPage()"
           tabindex="0"
         >
-          <span>Interlibrary Loan Requests On Order</span>
+          <span>Pending Interlibrary Loan Requests</span>
         </h2>
       </div>
     </div>
