Add GetIt note component

--- a/scss/components/search/_full-view.scss
+++ b/scss/components/search/_full-view.scss
@@ -67,3 +67,9 @@ prm-action-list button.md-button.md-primary {
 .recommendations-item a:focus {
   text-decoration: underline;
 }
+
+get-it-note section {
+  background-color: #fff;
+  padding: 1em;
+  font-weight: bold;
+}
