Add availability override component
We want to show a custom calculated availability message for the
ArcivesSpace records, and there doesn't seem to be a way to do this
with Primo's back end configuration.

--- a/js/components/search/search-result/search-result-availability/prm-search-result-availability-line-after.html
+++ b/js/components/search/search-result/search-result-availability/prm-search-result-availability-line-after.html
@@ -1,4 +1,3 @@
-<hathi-trust-availability
-  hide-online="true"
-></hathi-trust-availability>
+<availability-override></availability-override>
+<hathi-trust-availability hide-online="true"></hathi-trust-availability>
 <browzine></browzine>
