Uncollapse advanced search with JS
Force the advanced search form to always appear in an "uncollaped"
state. Previously we'd solved this with a CSS hack, but the form
elements were not accessible with keyboard navigation.

--- a/scss/components/search/_search-bar.scss
+++ b/scss/components/search/_search-bar.scss
@@ -1,6 +1,6 @@
 prm-search-bar {
   button {
-    &.switch-to-advanced, 
+    &.switch-to-advanced,
     &.switch-to-simple {
       //border: solid 1px;
       font-weight: 600;
@@ -9,5 +9,9 @@ prm-search-bar {
 }
 
 .classic-input .search-scope.journal-search-tile {
-  padding: 0 .5em;
+  padding: 0 0.5em;
+}
+
+prm-advanced-search .collapsed-area {
+  display: none;
 }
