Hide the "online" scope
This scope is used with our Leganto search integration.

--- a/scss/components/search/_search-bar.scss
+++ b/scss/components/search/_search-bar.scss
@@ -15,3 +15,8 @@ prm-search-bar {
 prm-advanced-search .collapsed-area {
   display: none;
 }
+
+// hide the "online" scope option
+md-option[ng-repeat="scope in $ctrl.scopesOptions"][value="online"] {
+  display: none;
+}
