Hide advanced search collapse button
Newly added in the February 2023 release...

--- a/scss/components/search/_search-bar.scss
+++ b/scss/components/search/_search-bar.scss
@@ -12,7 +12,7 @@ prm-search-bar {
   padding: 0 0.5em;
 }
 
-prm-advanced-search .collapsed-area {
+prm-advanced-search .collapsed-button {
   display: none;
 }
 
